Created tictactoe new and free functions.

--- a/c-sdl2-tiktaktoe/CMakeLists.txt
+++ b/c-sdl2-tiktaktoe/CMakeLists.txt
@@ -1,19 +1,21 @@
 cmake_minimum_required(VERSION 2.8)
 
-project(tiktaktoe)
+project(tictactoe)
 
 # Set source and include folders
-set(SRC_DIR "src")
-set(INC_DIR "include")
+set(SRC_DIR "./src")
+set(INC_DIR "./include")
+
+include_directories(${INC_DIR})
 
 # Set include files
 set(INCLUDES
     ${INC_DIR}/internal.h
-    ${INC_DIR}/tiktaktoe_ctx.h)
+    ${INC_DIR}/tictactoe_ctx.h)
 
 # Set source files
 set(SOURCES
     ${SRC_DIR}/main.c
-    ${SRC_DIR}/tiktaktoe_ctx.c)
+    ${SRC_DIR}/tictactoe_ctx.c)
 
 add_executable(${PROJECT_NAME} ${SOURCES} ${INCLUDES})
