Added cmake files to found SDL2 libs. Created tictactoe gui source and header files.

--- a/c-sdl2-tiktaktoe/CMakeLists.txt
+++ b/c-sdl2-tiktaktoe/CMakeLists.txt
@@ -2,20 +2,35 @@ cmake_minimum_required(VERSION 2.8)
 
 project(tictactoe)
 
+# Set cmake module path
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
+
 # Set source and include folders
 set(SRC_DIR "./src")
 set(INC_DIR "./include")
 
-include_directories(${INC_DIR})
+# Find packages
+find_package(SDL2 REQUIRED)
+find_package(SDL2_IMAGE REQUIRED)
+find_package(SDL2_ttf REQUIRED)
+
+# Set include directories
+include_directories(${INC_DIR}
+                    ${SDL2_INCLUDE_DIRS}
+                    ${SDL2_IMAGE_INCLUDE_DIRS}
+                    ${SDL2_TTF_INCLUDE_DIRS})
 
 # Set include files
 set(INCLUDES
     ${INC_DIR}/internal.h
-    ${INC_DIR}/tictactoe_ctx.h)
+    ${INC_DIR}/tictactoe_ctx.h
+    ${INC_DIR}/tictactoe_gui.h)
 
 # Set source files
 set(SOURCES
     ${SRC_DIR}/main.c
-    ${SRC_DIR}/tictactoe_ctx.c)
+    ${SRC_DIR}/tictactoe_ctx.c
+    ${SRC_DIR}/tictactoe_gui.c)
 
 add_executable(${PROJECT_NAME} ${SOURCES} ${INCLUDES})
+target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${SDL2_TTF_LIBRARIES})
