Developed new project structure and firts version of game menu.

--- a/c-sdl2-tiktaktoe/CMakeLists.txt
+++ b/c-sdl2-tiktaktoe/CMakeLists.txt
@@ -22,11 +22,17 @@ include_directories(${INC_DIR}
 
 # Set include files
 set(INCLUDES
-    ${INC_DIR}/internal.h)
+    ${INC_DIR}/internal.h
+    ${INC_DIR}/tictactoe.h
+    ${INC_DIR}/menu.h
+    ${INC_DIR}/color.h)
 
 # Set source files
 set(SOURCES
-    ${SRC_DIR}/main.c)
+    ${SRC_DIR}/main.c
+    ${SRC_DIR}/tictactoe.c
+    ${SRC_DIR}/menu.c
+    ${SRC_DIR}/color.c)
 
 add_executable(${PROJECT_NAME} ${SOURCES} ${INCLUDES})
 target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${SDL2_TTF_LIBRARIES})
