--- a/c-sdl2-tiktaktoe/CMakeLists.txt
+++ b/c-sdl2-tiktaktoe/CMakeLists.txt
@@ -26,7 +26,8 @@ set(INCLUDES
     ${INC_DIR}/tictactoe.h
     ${INC_DIR}/menu.h
     ${INC_DIR}/color.h
-    ${INC_DIR}/board.h)
+    ${INC_DIR}/board.h
+    ${INC_DIR}/shape.h)
 
 # Set source files
 set(SOURCES
@@ -34,7 +35,8 @@ set(SOURCES
     ${SRC_DIR}/tictactoe.c
     ${SRC_DIR}/menu.c
     ${SRC_DIR}/color.c
-    ${SRC_DIR}/board.c)
+    ${SRC_DIR}/board.c
+    ${SRC_DIR}/shape.c)
 
 add_executable(${PROJECT_NAME} ${SOURCES} ${INCLUDES})
-target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${SDL2_TTF_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${SDL2_TTF_LIBRARIES} m)
