--- a/c-sdl2-tictactoe/CMakeLists.txt
+++ b/c-sdl2-tictactoe/CMakeLists.txt
@@ -2,6 +2,10 @@ cmake_minimum_required(VERSION 2.8)
 
 project(tictactoe)
 
+if (WIN32)
+    set(CMAKE_CXX_STANDARD 11)
+endif()
+
 # Set cmake module path
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
 
@@ -9,16 +13,29 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
 set(SRC_DIR "./src")
 set(INC_DIR "./include")
 
-# Find packages
-find_package(SDL2 REQUIRED)
-find_package(SDL2_IMAGE REQUIRED)
-find_package(SDL2_ttf REQUIRED)
 
-# Set include directories
-include_directories(${INC_DIR}
-                    ${SDL2_INCLUDE_DIRS}
-                    ${SDL2_IMAGE_INCLUDE_DIRS}
-                    ${SDL2_TTF_INCLUDE_DIRS})
+if (WIN32)
+
+    set(SDL2_PATH "C:\\Work\\DevLibs\\SDL\\")
+    set(SDL2_INCLUDE "C:\\Work\\DevLibs\\SDL\\include\\")
+    set(SDL2_MAIN_LIB "C:/Work/DevLibs/SDL/lib/libSDL2main.a")
+    set(SDL2_LIB "C:/Work/DevLibs/SDL/lib/libSDL2.dll.a")
+
+    include_directories(${SDL2_INCLUDE})
+
+else()
+
+    # Find packages
+    find_package(SDL2 REQUIRED)
+    find_package(SDL2_IMAGE REQUIRED)
+    find_package(SDL2_ttf REQUIRED)
+
+    # Set include directories
+    include_directories(${INC_DIR}
+                        ${SDL2_INCLUDE_DIRS}
+                        ${SDL2_IMAGE_INCLUDE_DIRS}
+                        ${SDL2_TTF_INCLUDE_DIRS})
+endif()
 
 # Set include files
 set(INCLUDES
@@ -43,4 +60,9 @@ set(SOURCES
     ${SRC_DIR}/endmenu.c)
 
 add_executable(${PROJECT_NAME} ${SOURCES} ${INCLUDES})
-target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${SDL2_TTF_LIBRARIES} m)
+
+if (WIN32)
+
+else()
+    target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${SDL2_TTF_LIBRARIES} m)
+endif()
